--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "bugs": {},
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.7.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1"
